[gd_scene load_steps=5 format=2]

[ext_resource path="res://GlobalTheme.tres" type="Theme" id=1]
[ext_resource path="res://UI/MainMenu/SaveGameElement.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/MainMenu/SaveGameScreen.gd" type="Script" id=3]
[ext_resource path="res://Game/UI/Buttons/BetterButton.tscn" type="PackedScene" id=4]

[node name="SaveGameScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_right = 1280.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ScrollVBox" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 1280.0
margin_bottom = 616.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_right = 1280.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 24.0
margin_right = 1280.0
margin_bottom = 87.0
bbcode_enabled = true
bbcode_text = "Here you can save your game
Keep in mind that during the early development save structure might change a lot and so your previous saves might not work anymore, sorry. Your best bet would be saving inside your cell when you wanna switch versions"
text = "Here you can save your game
Keep in mind that during the early development save structure might change a lot and so your previous saves might not work anymore, sorry. Your best bet would be saving inside your cell when you wanna switch versions"
fit_content_height = true

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 91.0
margin_right = 1280.0
margin_bottom = 121.0

[node name="SaveFileNameInput" type="LineEdit" parent="VBoxContainer/ScrollContainer/ScrollVBox/HBoxContainer"]
margin_right = 500.0
margin_bottom = 30.0
rect_min_size = Vector2( 500, 0 )
size_flags_horizontal = 13
size_flags_vertical = 3

[node name="SaveButton" type="Button" parent="VBoxContainer/ScrollContainer/ScrollVBox/HBoxContainer"]
margin_left = 504.0
margin_right = 557.0
margin_bottom = 30.0
text = "Save"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 125.0
margin_right = 1280.0
margin_bottom = 129.0

[node name="SavesContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/ScrollVBox"]
margin_top = 133.0
margin_right = 1280.0
margin_bottom = 195.0
size_flags_horizontal = 3
custom_constants/separation = 10

[node name="SaveGameElement" parent="VBoxContainer/ScrollContainer/ScrollVBox/SavesContainer" instance=ExtResource( 2 )]

[node name="SaveGameElement2" parent="VBoxContainer/ScrollContainer/ScrollVBox/SavesContainer" instance=ExtResource( 2 )]
margin_top = 36.0
margin_bottom = 62.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 620.0
margin_right = 1280.0
margin_bottom = 720.0
rect_min_size = Vector2( 0, 100 )
columns = 5

[node name="CloseButton" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 256.0
margin_bottom = 26.0
text = "Close"
myShortcutKey = "1"

[node name="DeleteButton" parent="VBoxContainer/GridContainer" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 260.0
margin_right = 515.0
margin_bottom = 26.0
text = "Delete Save"
myShortcutKey = "2"

[connection signal="visibility_changed" from="." to="." method="_on_LoadGameScreen_visibility_changed"]
[connection signal="text_changed" from="VBoxContainer/ScrollContainer/ScrollVBox/HBoxContainer/SaveFileNameInput" to="." method="_on_SaveFileNameInput_text_changed"]
[connection signal="pressed" from="VBoxContainer/ScrollContainer/ScrollVBox/HBoxContainer/SaveButton" to="." method="_on_SaveButton_pressed"]
[connection signal="pressedActually" from="VBoxContainer/GridContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
[connection signal="pressedActually" from="VBoxContainer/GridContainer/DeleteButton" to="." method="_on_DeleteButton_pressed"]
